# radioRecorder

./: Dockerfile  LICENSE  README.md  pyproject.toml
src/: area_sender.py  localModule.py  localModuleForMinpou.py  program_selector_for_minpou.py  radioRecorder.py  recorder_for_minpou.py  scheduler.py  scheduler_for_minpou.py  tablegetter.py  tabler.py  tabler_for_minpou.py
src/data/: table.csv
